# langchain-basic-course

./: .env.example  .gitignore  LICENSE  NOTICE.md  README.md  SETUP.md  [LLM]_01_GenAI_Intro[Lecture].ipynb  [LLM]_02_LangChain_Core_LCEL[Lecture].ipynb  [LLM]_03_Prompt_Structured_Output[Lecture].ipynb  [LLM]_04_Tools[Lecture].ipynb  [LLM]_05_Agents[Lecture].ipynb  [LLM]_06_RAG_Data_Pipeline[Lecture].ipynb  pyproject.toml  requirements.txt
data/: hr_manual.md  it_guide.md
