[project]
name = "langchain-basic-course"
version = "0.1.0"
description = "생성형 AI / LLM 입문 강의 — 인프런 시즌2 무료 미리보기 + 유튜브 동시 게시"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # 환경 / 공통
    "python-dotenv>=1.0.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    # 01 GenAI Intro (OpenAI SDK 직접 사용)
    "openai>=2.0.0",
    # 02~ LangChain 코어 (v1.0+)
    "langchain>=1.2.0",
    "langchain-core>=1.3.0",
    "langchain-community>=0.4.0",
    "langchain-text-splitters>=1.1.0",  # 06번 RAG 청크 분할
    # 3-option LLM 통합 (모두 langchain v1.x 호환)
    "langchain-google-genai>=4.0.0",  # Option 1: gemini-2.5-flash-lite
    "langchain-groq>=1.1.0",          # Option 2: qwen/qwen3-32b
    "langchain-ollama>=1.1.0",        # Option 3 LLM (gemma4:e4b) + 03/06 임베딩(bge-m3). 1.1.0+ 는 bind_tools() 지원에 필수
    "langchain-openai>=1.2.0",        # 선택 옵션 (유료)
    # 04 Tools — 웹 검색
    "langchain-tavily>=0.2.0",
    # 05 Agents / LangGraph
    "langgraph>=1.1.0",
    # 06 RAG
    "faiss-cpu>=1.8.0",
    "pypdf>=4.0.0",
    "tiktoken>=0.7.0",
    # 03 구조화 출력
    "pydantic>=2.7.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.5.0",
]
